# tetris-modern

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  TASKS.md
roms/: README.md
scripts/: audit-distribution.py  build.sh  check-clean-checkout.sh  run.sh  test.sh
src/: application.cpp  application.hpp  controls.cpp  controls.hpp  controls_menu.cpp  controls_menu.hpp  debug_menu.cpp  debug_menu.hpp  frame.cpp  frame.hpp  main.cpp  settings.cpp  settings.hpp  step.cpp  step.hpp  window.cpp  window.hpp
src/app/: app.cpp  app.hpp  controls_menu.cpp  controls_menu.hpp  debug_ui.cpp  debug_ui.hpp  input.cpp  input.hpp  main.cpp  persistence.cpp  persistence.hpp
src/audio/: director.cpp  director.hpp  music.cpp  music.hpp  output.cpp  output.hpp  sound_effects.cpp  sound_effects.hpp
src/content/: audio.cpp  audio.hpp  catalog.cpp  catalog.hpp  provenance.hpp  rom.cpp  rom.hpp  sha1.cpp  sha1.hpp
src/game/: board.cpp  board.hpp  demo.cpp  demo.hpp  demo_data.hpp  endings.cpp  flow.cpp  flow.hpp  flow_endings.cpp  gameplay_data.hpp  high_scores.cpp  high_scores.hpp  input.cpp  input.hpp  menus.cpp  multiplayer.cpp  multiplayer.hpp  options.hpp  piece.cpp  piece.hpp  randomizer.cpp  randomizer.hpp  replay.cpp  replay.hpp  rules.cpp  rules.hpp  single_player.cpp  single_player.hpp  state.cpp  state.hpp  types.hpp
src/presentation/: drawing.hpp  effects.cpp  effects.hpp  endings.cpp  endings.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  ui.cpp  ui.hpp
src/storage/: high_scores.cpp  high_scores.hpp
src/video/: backend.hpp  controller_labels.cpp  controller_labels.hpp  drawing.hpp  effects.cpp  effects.hpp  endings.cpp  endings.hpp  interpolation.cpp  interpolation.hpp  output.cpp  output.hpp  ui.cpp  ui.hpp  video.cpp  video.hpp
tests/: audio_output_tests.cpp  audio_tests.cpp  content_tests.cpp  flow_tests.cpp  game_tests.cpp  gameplay_fixture.hpp  input_tests.cpp  multiplayer_tests.cpp  persistence_tests.cpp  presentation_tests.cpp  simulation_tests.cpp  state_tests.cpp  video_tests.cpp
tools/: music_trace.cpp  semantic_trace.cpp
